# curse_impact

./: .gitmodules  CMakeLists.txt  README.md  compile.sh
inc/: bullet_t.hpp  choord_t.hpp  dynamic_cyclic_buffer.hpp  error.hpp  event_t.hpp  gamefield_t.hpp  healthbar_t.hpp  image_t.hpp  instruction_t.hpp  naive_cyclic_buffer.hpp  position_t.hpp  rect_t.hpp  render.hpp  script_t.hpp  ship.hpp  ship_t.hpp  texture_t.hpp  unique.hpp  util.hpp
inc/display/: border_drawer_t.hpp  healthbar_t.hpp
renderer/: CMakeLists.txt
renderer/exc/: main.cpp
renderer/inc/: algorithm.hpp  canvas_t.hpp  coord_t.hpp  pixel_info.hpp  polygon_t.hpp  rectangle_t.hpp  render.hpp  render_v2.hpp  scale.hpp  test.hpp  util.hpp
renderer/inc/flavour/: cloud.hpp
renderer/src/: algorithm.cpp  polygon_t.cpp
renderer/src/flavour/: cloud.cpp
renderer/test/: choord_test.cpp  gcd_test.cpp  main.cpp
res/: game_script.xml  level_2.xml
res/texture/: enemy_A.txt  enemy_B.txt  enemy_BOSS.txt  enemy_C.txt  environment_lower_texture.txt  environment_upper_texture.txt  player_ship.txt
src/: bullet_t.cpp  event_t.cpp  gamefield_t.cpp  healthbar_t.cpp  main.cpp  render.cpp  script_t.cpp  ship.cpp  ship_t.cpp  texture_t.cpp  unique.cpp  util.cpp
src/display/: border_drawer_t.cpp  healthbar_t.cpp
